fix text alignment issues in tables

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -43,8 +43,8 @@ table.pure-table {
     color: red;
 }
 
-.number {
-    text-align: right;
+.right-align {
+    text-align: right !important;
 }
 
 table.small-td-text td {
